--- a/YimMenu Updater/YimMenu Updater.csproj
+++ b/YimMenu Updater/YimMenu Updater.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
