Added Download HorseMenu option Added nefarious injector

--- a/YimMenu Updater/YimMenu Updater.csproj
+++ b/YimMenu Updater/YimMenu Updater.csproj
@@ -42,4 +42,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="dllinject.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
