Add game detection for injection and game launching
added game detection before injection
added game launching for gta5 and minecraft.windows

--- a/YimMenu Updater/YimMenu Updater.csproj
+++ b/YimMenu Updater/YimMenu Updater.csproj
@@ -8,6 +8,7 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>True</UseWindowsForms>
     <ApplicationIcon>textures\icon.ico</ApplicationIcon>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
