--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -56,8 +56,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: Latest Release
-        release_name: Release ${{ github.sha }}
+        tag_name: Release
+        release_name: Release
         draft: false
         prerelease: false
 
