--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -37,18 +37,23 @@ jobs:
     - name: Locate Build Output
       id: locate_build
       run: |
-        $buildPath = Get-ChildItem -Directory -Path D:\a\YMU\YMU\ -Recurse -Filter "Release" | Select-Object -First 1 -ExpandProperty FullName
-        Write-Host "::set-output name=build_path::$buildPath"
+        $buildPath = Get-ChildItem -Directory -Path $Env:GITHUB_WORKSPACE -Recurse -Filter "Release" | Select-Object -First 1 -ExpandProperty FullName
+        echo "build_path=$buildPath" >> $GITHUB_ENV
       shell: pwsh
 
     - name: Archive build output
       run: |
-        $buildPath = '${{ steps.locate_build.outputs.build_path }}'
+        $buildPath = $env:build_path
         echo "Build path: $buildPath"
         mkdir build
         Copy-Item -Path "$buildPath\*" -Destination build -Recurse
         Compress-Archive -Path build/* -DestinationPath build.zip
       shell: pwsh
+
+    - name: Get current date
+      id: get_date
+      run: echo "TAG_NAME=v$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
+      shell: bash
 
     - name: Create Release
       id: create_release
@@ -56,8 +61,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: Release
-        release_name: Release
+        tag_name: ${{ env.TAG_NAME }}
+        release_name: Release ${{ env.TAG_NAME }}
         draft: false
         prerelease: false
 
