--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -32,22 +32,12 @@ jobs:
       run: dotnet restore
 
     - name: Build
-      run: dotnet build --configuration Release
-
-    - name: Locate Build Output
-      id: locate_build
-      run: |
-        $buildPath = Get-ChildItem -Directory -Path $Env:GITHUB_WORKSPACE -Recurse -Filter "Release" | Select-Object -First 1 -ExpandProperty FullName
-        echo "build_path=$buildPath" >> $GITHUB_ENV
-      shell: pwsh
+      run: dotnet build --configuration Release --output build_output
 
     - name: Archive build output
       run: |
-        $buildPath = $env:build_path
-        echo "Build path: $buildPath"
-        mkdir build
-        Copy-Item -Path "$buildPath\*" -Destination build -Recurse
-        Compress-Archive -Path build/* -DestinationPath build.zip
+        echo "Build path: $(pwd)/build_output"
+        Compress-Archive -Path build_output/* -DestinationPath build.zip -CompressionLevel Optimal
       shell: pwsh
 
     - name: Get current date
