--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -32,12 +32,15 @@ jobs:
       run: dotnet restore
 
     - name: Build
-      run: dotnet build --configuration Release --output build_output
+      run: |
+        dotnet build --configuration Release --output build_output
 
     - name: Archive build output
       run: |
         echo "Build path: $(pwd)/build_output"
-        Compress-Archive -Path build_output/* -DestinationPath build.zip -CompressionLevel Optimal
+        mkdir build
+        Copy-Item -Path "build_output/*" -Destination build -Recurse
+        Compress-Archive -Path build/* -DestinationPath build.zip -CompressionLevel Optimal
       shell: pwsh
 
     - name: Get current date
@@ -47,7 +50,7 @@ jobs:
 
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1
+      uses: actions/create-release@v3
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
@@ -57,7 +60,7 @@ jobs:
         prerelease: false
 
     - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
+      uses: actions/upload-release-asset@v3
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
